--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@inquirer/prompts": "^2.0.0",
+    "@opensea/seaport-js": "^2.0.4",
     "axios": "^1.2.3",
     "commander": "^10.0.0",
     "ethers": "^5.7.2",
+    "opensea-js": "^6.1.2",
     "userop": "^0.3.0"
   },
   "devDependencies": {
